@@ -258,7 +258,7 @@ ctx.svn_property_setters.extend([
     # patterns found in the auto-props file:
     #AutoPropsPropertySetter(
     #    r'/home/username/.subversion/config',
-    #    False,
+    #    ignore_case=True,
     #    ),
 
     # To read mime types from a file, uncomment the following line and
